Fix edit upload image

--- a/public/beer.html
+++ b/public/beer.html
@@ -48,7 +48,7 @@
       <button class="btn-lg btn-default" ng-click="go('/')">Back</button>
     </div>
     <div class="grid-xs-2">
-      <button class="btn-lg btn-primary" ng-click="toggleEdit()">Edit</button>
+      <button class="btn-lg btn-primary" ng-click="go('/beers/edit/'+beer._id)">Edit</button>
     </div>
   </div>
   
