--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <header class="grid-container-fluid bg-light">
       <div class="grid-row padding-sm">
         <div class="grid-xs-12 align-center">
-          <h1><a href="/" class="text-xl text-primary bold">IPA Day - Beers</a></h1>
+          <h1><a href="/" class="text-lg text-primary bold">IPA Day</a></h1>
         </div>
       </div>
     </header>
