--- a/public/beer-add.html
+++ b/public/beer-add.html
@@ -11,16 +11,16 @@
         <input id="name" class="field text-field text-field-lg" type="text" ng-model="beer.name" required> 
       </div>
   </div>
-  <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-3">
+  <div class="grid-row">
+      <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
         <label class="text-sm text-default">ABV:</label> 
         <input id="abv" class="field text-field text-field-lg" type="text" ng-model="beer.ABV" required> 
       </div>
-      <div class="grid-xs-3">
+      <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
         <label class="text-sm text-default">IBU:</label> 
         <input id="ibu" class="field text-field text-field-lg" type="text" ng-model="beer.IBU" required> 
       </div>
-      <div class="grid-xs-6">
+      <div class="grid-xs-12 grid-sm-6 margin-bottom-xl">
         <label class="text-sm text-default">Style:</label> 
         <input id="style" class="field text-field text-field-lg" type="text" ng-model="beer.style"> 
       </div>
@@ -31,25 +31,22 @@
         <input id="details" class="field text-field text-field-lg" type="text" ng-model="beer.details"> 
       </div>
   </div>
-  <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-4">
+  <div class="grid-row">
+      <div class="grid-xs-12 grid-sm-4 margin-bottom-xl">
         <label class="text-sm text-default">Image:</label>
-        <div class="btn-secondary btn-lg" ngf-select ng-model="image" name="image" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">Select</div>
+        <div class="btn-secondary btn-sm" ngf-select ng-model="image" name="image" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">Select</div>
       </div>
-      <div class="grid-xs-4">
+      <div class="grid-xs-6 grid-sm-4 margin-bottom-xl">
         <label class="text-sm text-default">Brewery:</label> 
         <input id="brewery" class="field text-field text-field-lg" type="text" ng-model="beer.brewery"> 
       </div>
-      <div class="grid-xs-4">
+      <div class="grid-xs-6 grid-sm-4 margin-bottom-xl">
         <label class="text-sm text-default">City:</label> 
         <input id="city" class="field text-field text-field-lg" type="text" ng-model="beer.city"> 
       </div>
   </div>
   <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-2 grid-xs-offset-8">
-        <button class="btn-lg btn-default" ng-click="back()">Back</button>
-      </div>
-      <div class="grid-xs-2">
+      <div class="grid-xs-12 grid-sm-3 grid-sm-offset-9">
         <button class="btn-lg btn-primary" ng-click="saveBeer(beer)">Save</button>
       </div>
   </div>
