--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>IPA Day</title>
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/acsset.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <!--[if lt IE 9]>
       <script type="text/javascript" src="/js/html5shiv.js"></script>
     <![endif]-->
