--- a/public/list.html
+++ b/public/list.html
@@ -9,18 +9,20 @@
 
 <div class="grid-row">
   <ul class="list list-horizontal">
-    <li class="list-item grid-xs-6 grid-sm-4 grid-md-3 grid-lg-2 margin-bottom-xl" ng-repeat="beer in beers | orderBy:'name'">
-      <div class="align-center">
-        <a ng-href="/beers/{{beer._id}}">
-          <img ng-if="beer.image" src="/uploads/{{ beer.image }}" alt="{{ beer.name }}" class="img">
-        </a>
-      </div>
-      <div>
-        <p class="margin-top-xs margin-bottom-xs"><a class="text-sm text-primary" ng-href="/beers/{{beer._id}}">{{ beer.name }}</a></p>
-        <p class="text-xs text-default margin-top-xs margin-bottom-xs">ABV: {{ beer.ABV }} IBU: {{ beer.IBU }}</p>
-        <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.style }}</p>
-        <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.brewery }}</p>
-        <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.city }}</p>
+    <li class="list-item grid-xs-12 grid-sm-6 grid-md-4 grid-lg-3 margin-bottom-lg" ng-repeat="beer in beers | orderBy:'name'">
+      <div class="product padding-lg">
+        <div class="align-center">
+          <a ng-href="/beers/{{beer._id}}">
+            <img ng-if="beer.image" src="/uploads/{{ beer.image }}" alt="{{ beer.name }}" class="img">
+          </a>
+        </div>
+        <div>
+          <p class="margin-top-xs margin-bottom-xs"><a class="text-sm text-primary" ng-href="/beers/{{beer._id}}">{{ beer.name }}</a></p>
+          <p class="text-xs text-default margin-top-xs margin-bottom-xs">ABV: {{ beer.ABV }} IBU: {{ beer.IBU }}</p>
+          <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.style }}</p>
+          <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.brewery }}</p>
+          <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.city }}</p>
+        </div>
       </div>
     </li>
   </ul>
