--- a/public/beer.html
+++ b/public/beer.html
@@ -26,13 +26,17 @@
       </div>
   </div>
   <div class="grid-row">
-      <div class="grid-xs-6 margin-bottom-xl">
+      <div class="grid-xs-5 margin-bottom-xl">
         <label class="text-xs text-default">Brewery:</label> 
         <p class="text-md text-default clear-margin" ng-if="beer.brewery">{{ beer.brewery }} </p>
       </div>
-      <div class="grid-xs-6 margin-bottom-xl">
+      <div class="grid-xs-5 margin-bottom-xl">
         <label class="text-xs text-default">City:</label> 
         <p class="text-md text-default clear-margin" ng-if="beer.city">{{ beer.city }}</p>
+      </div>
+      <div class="grid-xs-2 margin-bottom-xl">
+        <label class="text-xs text-default">Year:</label> 
+        <p class="text-md text-default clear-margin" ng-if="beer.year">{{ beer.year }}</p>
       </div>
   </div>
   <div class="grid-row">
