--- a/public/beer.html
+++ b/public/beer.html
@@ -50,7 +50,7 @@
       <button class="btn-lg btn-secondary" ng-click="deleteBeer(beer._id)">Delete</button>
     </div>
     <div class="grid-xs-8 grid-sm-3 grid-sm-offset-7 margin-bottom-xl">
-      <button class="btn-lg btn-primary" ng-click="go('/beers/edit/'+beer._id)">Edit</button>
+      <a href="/beers/edit/{{ beer._id }}" class="btn-lg btn-primary clear-decoration">Edit</a>
     </div>
   </div>
   
