--- a/public/list.html
+++ b/public/list.html
@@ -3,7 +3,7 @@
     <h2 class="text-lg text-default">All Beers</h2>
   </div>
   <div class="grid-xs-6 grid-sm-2 padding-top-lg padding-bottom-lg">
-    <button class="btn-sm btn-primary" ng-click="go('/beers/new')">New</button>
+    <a href="/beers/new" class="btn-sm btn-primary clear-decoration">New</a>
   </div>
 </div>
 
