--- a/public/beer-add.html
+++ b/public/beer-add.html
@@ -1,57 +1,56 @@
-<div class="grid-row" ng-hide="beer._id">
+<div class="grid-row">
   <div class="grid-xs-12">
-    <h2 class="text-lg text-default">New Beer</h2>
+    <h2 class="text-xl text-default">New Beer</h2>
   </div>
 </div>
-
 <form name="form">
   <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-12">
-        <label class="text-sm text-default">Name:</label> 
-        <input id="name" class="field text-field text-field-lg" type="text" ng-model="beer.name" required> 
-      </div>
+    <div class="grid-xs-12">
+      <label class="text-sm text-default">Name:</label>
+      <input id="name" class="field text-field text-field-lg" type="text" ng-model="beer.name" required>
+    </div>
   </div>
   <div class="grid-row">
-      <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
-        <label class="text-sm text-default">ABV:</label> 
-        <input id="abv" class="field text-field text-field-lg" type="text" ng-model="beer.ABV" required> 
-      </div>
-      <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
-        <label class="text-sm text-default">IBU:</label> 
-        <input id="ibu" class="field text-field text-field-lg" type="text" ng-model="beer.IBU" required> 
-      </div>
-      <div class="grid-xs-12 grid-sm-6 margin-bottom-xl">
-        <label class="text-sm text-default">Style:</label> 
-        <input id="style" class="field text-field text-field-lg" type="text" ng-model="beer.style"> 
-      </div>
+    <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
+      <label class="text-sm text-default">ABV:</label>
+      <input id="abv" class="field text-field text-field-lg" type="text" ng-model="beer.ABV" required>
+    </div>
+    <div class="grid-xs-6 grid-sm-3 margin-bottom-xl">
+      <label class="text-sm text-default">IBU:</label>
+      <input id="ibu" class="field text-field text-field-lg" type="text" ng-model="beer.IBU" required>
+    </div>
+    <div class="grid-xs-12 grid-sm-6 margin-bottom-xl">
+      <label class="text-sm text-default">Style:</label>
+      <input id="style" class="field text-field text-field-lg" type="text" ng-model="beer.style">
+    </div>
   </div>
   <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-12">
-        <label class="text-sm text-default">Details:</label> 
-        <input id="details" class="field text-field text-field-lg" type="text" ng-model="beer.details"> 
-      </div>
+    <div class="grid-xs-12">
+      <label class="text-sm text-default">Details:</label>
+      <textarea id="details" ng-model="beer.details" class="textarea field text-field text-field-lg"></textarea>
+    </div>
   </div>
   <div class="grid-row">
-      <div class="grid-xs-5 margin-bottom-xl">
-        <label class="text-sm text-default">Brewery:</label> 
-        <input id="brewery" class="field text-field text-field-lg" type="text" ng-model="beer.brewery"> 
-      </div>
-      <div class="grid-xs-5 margin-bottom-xl">
-        <label class="text-sm text-default">City:</label> 
-        <input id="city" class="field text-field text-field-lg" type="text" ng-model="beer.city"> 
-      </div>
-      <div class="grid-xs-2 margin-bottom-xl">
-        <label class="text-sm text-default">Year:</label> 
-        <input id="year" class="field text-field text-field-lg" type="text" ng-model="beer.year"> 
-      </div>
-      <div class="grid-xs-12 grid-sm-4 margin-bottom-xl">
-        <label class="text-sm text-default">Image:</label>
-        <div class="btn-secondary btn-sm" ngf-select ng-model="image" name="image" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="5MB">Select</div>
-      </div>
+    <div class="grid-xs-6 grid-md-5 margin-bottom-xl">
+      <label class="text-sm text-default">Brewery:</label>
+      <input id="brewery" class="field text-field text-field-lg" type="text" ng-model="beer.brewery">
+    </div>
+    <div class="grid-xs-6 grid-md-5 margin-bottom-xl">
+      <label class="text-sm text-default">City:</label>
+      <input id="city" class="field text-field text-field-lg" type="text" ng-model="beer.city">
+    </div>
+    <div class="grid-xs-12 grid-md-2 margin-bottom-xl">
+      <label class="text-sm text-default">Event year:</label>
+      <input id="year" class="field text-field text-field-lg" type="text" ng-model="beer.year">
+    </div>
+    <div class="grid-xs-12 grid-sm-4 margin-bottom-xl">
+      <label class="text-sm text-default">Image:</label>
+      <div class="btn-default btn-sm" ngf-select ng-model="image" name="image" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="5MB">Select</div>
+    </div>
   </div>
   <div class="grid-row margin-bottom-xl">
-      <div class="grid-xs-12 grid-sm-3 grid-sm-offset-9">
-        <button class="btn-lg btn-primary" ng-click="saveBeer(beer)">Save</button>
-      </div>
+    <div class="grid-xs-12 grid-sm-3 grid-sm-offset-9">
+      <button class="btn-lg btn-primary" ng-click="saveBeer(beer)">Save</button>
+    </div>
   </div>
 </form>
