--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
   </head>
 
   <body>
-    <header class="grid-container-fluid bg-light">
-      <div class="grid-row padding-sm">
+    <header class="grid-container-fluid bg-primary">
+      <div class="grid-row">
         <div class="grid-xs-12 align-center">
-          <h1><a href="/" class="text-lg text-primary bold">IPA Day</a></h1>
+          <a href="/" class="block"><img src="/images/logo.jpg" alt="" class="img"></a>
         </div>
       </div>
     </header>
