--- a/public/list.html
+++ b/public/list.html
@@ -1,12 +1,11 @@
 <div class="grid-row">
-  <div class="grid-xs-6 grid-sm-10">
-    <h2 class="text-lg text-default">All Beers</h2>
+  <div class="grid-xs-8 grid-sm-10">
+    <h2 class="text-xl text-default">All Beers</h2>
   </div>
-  <div class="grid-xs-6 grid-sm-2 padding-top-lg padding-bottom-lg">
+  <div class="grid-xs-4 grid-sm-2 margin-top-xl">
     <a href="/beers/new" class="btn-sm btn-primary clear-decoration">New</a>
   </div>
 </div>
-
 <div class="grid-row">
   <ul class="list list-horizontal">
     <li class="list-item grid-xs-12 grid-sm-6 grid-md-4 grid-lg-3 margin-bottom-lg" ng-repeat="beer in beers | orderBy:'name'">
@@ -17,7 +16,7 @@
           </a>
         </div>
         <div>
-          <p class="margin-top-xs margin-bottom-xs"><a class="text-sm text-primary" ng-href="/beers/view/{{beer._id}}">{{ beer.name }}</a></p>
+          <p class="margin-top-xs margin-bottom-xs"><a class="text-md text-primary bold" ng-href="/beers/view/{{beer._id}}">{{ beer.name }}</a></p>
           <p class="text-xs text-default margin-top-xs margin-bottom-xs">ABV: {{ beer.ABV }} IBU: {{ beer.IBU }}</p>
           <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.style }}</p>
           <p class="text-xs text-default margin-top-xs margin-bottom-xs">{{ beer.brewery }}</p>
