Fix update beer

--- a/public/beer-add.html
+++ b/public/beer-add.html
@@ -41,7 +41,7 @@
     </div>
     <div class="grid-xs-12 grid-md-2 margin-bottom-xl">
       <label class="text-sm text-default">Event year:</label>
-      <input id="year" class="field text-field text-field-lg" type="text" ng-model="beer.year">
+      <input id="year" class="field text-field text-field-lg" type="number" ng-model="beer.year">
     </div>
     <div class="grid-xs-12 grid-sm-4 margin-bottom-xl">
       <label class="text-sm text-default">Image:</label>
