Create directive to match height of the beers after loading the image

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
 
-    <div class="grid-container content" ng-view></div>
+    <div class="grid-container margin-top-xs margin-bottom-lg content" ng-view></div>
 
   </body>
 </html>
