Create login and register user

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     <!--[if lt IE 9]>
       <script type="text/javascript" src="/js/html5shiv.js"></script>
     <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.js"></script>
     <script src="https://angular-file-upload.appspot.com/js/ng-file-upload-shim.js"></script>
     <script src="https://angular-file-upload.appspot.com/js/ng-file-upload.js"></script>
 
